WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87375
[BlackBerry] Possible deadlock in the WebGL code path
https://bugs.webkit.org/show_bug.cgi?id=87375
Summary
[BlackBerry] Possible deadlock in the WebGL code path
Robin Cao
Reported
2012-05-24 05:13:27 PDT
Test cases under fast/canvas blockes DRT test. The cause is a deadlock in the WebGL code path.
Attachments
patch
(2.51 KB, patch)
2012-05-24 05:19 PDT
,
Robin Cao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Cao
Comment 1
2012-05-24 05:19:48 PDT
Created
attachment 143793
[details]
patch
Rob Buis
Comment 2
2012-05-24 05:31:21 PDT
Comment on
attachment 143793
[details]
patch Looks good.
WebKit Review Bot
Comment 3
2012-05-24 07:19:19 PDT
Comment on
attachment 143793
[details]
patch Clearing flags on attachment: 143793 Committed
r118365
: <
http://trac.webkit.org/changeset/118365
>
WebKit Review Bot
Comment 4
2012-05-24 07:19:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug