[BlackBerry] Possible deadlock in the WebGL code path https://bugs.webkit.org/show_bug.cgi?id=87375

Patch by Robin Cao <robin.cao@torchmobile.com.cn> on 2012-05-24
Reviewed by Rob Buis.

Fix a deadlock happening in the WebGL code path. The mutex is locked
but is not unlocked afterword. Also fix a possible double delete,
the mutex m_frontBufferLock will be destroyed in the base class.

Covered by tests in fast/canvas/webgl.

* platform/graphics/blackberry/LayerCompositingThread.cpp:
(WebCore::LayerCompositingThread::releaseTextureResources):
* platform/graphics/blackberry/WebGLLayerWebKitThread.cpp:
(WebCore::WebGLLayerWebKitThread::~WebGLLayerWebKitThread):

Canonical link: https://commits.webkit.org/105133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118365 268f45cc-cd09-0410-ab3c-d52691b4dbfc